--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
-{
-  "name": "websocket-proxy",
+ "name": "WS",
   "version": "1.0.0",
-  "description": "A WebSocket proxy server for TCP connections",
+  "description": "Your project description",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
+  "author": "kid",
+  "license": "MIT",
   "dependencies": {
-    "ws": "^8.5.1"
+    "http": "^1.0.0",
+    "fs": "^0.0.1",
+    "net": "^1.0.0",
+    "url": "^0.11.0",
+    "ws": "^8.0.0",
+    "https": "^1.0.0",
+    "child_process": "^1.0.0"
   }
 }
