--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
- "name": "WS",
+ "name": "my-ws-service",
   "version": "1.0.0",
-  "description": "Your project description",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
