--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
 "start": "node index.js"
 },
 "dependencies": {
-"ws": "^8.5.1",
-"http": "^1.0.0",
-"net": "^1.0.0",
-"url": "^0.11.0",
-"https": "^1.0.0",
-"child_process": "^1.0.0"
+ws: "^8.5.1"，
+http: "^1.0.0"，
+net: "^1.0.0"，
+url: "^0.11.0"，
+https: "^1.0.0"，
+child_process: "^1.0.0"
 }
 }
