--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "my-app",
+  "name": "your-project-name",
   "version": "1.0.0",
-  "description": "",
+  "description": "Description of your project",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^0.26.1",
-    "express": "^4.17.3"
+    "axios": "^0.21.1",
+    "express": "^4.17.1",
+    "os": "^0.1.1",
+    "pidusage": "^2.0.0"
   }
 }
