--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "fs": "0.0.1-security",
     "net": "^1.0.2",
     "url": "^0.11.0",
-    "ws": "^8.4.0"
+    "ws": "^8.4.0",
+    "child_process": "^1.0.2"
   },
   "scripts": {
     "start": "node index.js"
