--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "serverless-app",
+  "name": "my-app",
   "version": "1.0.0",
-  "description": "Serverless application",
+  "description": "My awesome app",
   "main": "index.js",
-  "author": "Your Name",
-  "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.103.0"
     "axios": "^0.24.0",
     "express": "^4.17.1"
-    "aws-sdk": "^2.103.0"
   }
 }
