--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
   "dependencies": {
     "aws-sdk": "^3.416.0",
     "axios": "^0.24.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
   }
 }
